@@ -1,3 +1,5 @@
+HEAD
+	+ Adapted to changes in group mail account
 3.5.3
 	+ Use bash as default shell
 	+ Added external AD field to LDAP information model
