@@ -1,3 +1,5 @@
+HEAD
+	+ Fixed group mail accounts and their aliases
 3.5.3
 	+ Do not move mailbox to .bak if directory already exist
 	+ Migrate mboxes path to Maildir when upgrading from 3.4
